src/main/java/com/example/errors/repositories/OfficeRepository.java
package com.example.errors.repositories;

import com.example.errors.models.Office;
import org.springframework.data.jpa.repository.JpaRepository;

public interface OfficeRepository extends JpaRepository<Office, Long> {
}
